Privat page cta buttons

--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -251,13 +251,20 @@
 							<div>
 								<ul>
 									<li class="col-5-12">
-										<p class="bold margin-bottom-1">
-											<p class="bold">
-												Enligt ABS 09 p 24
-											</p>
-											<p>
-												”Part får under entreprenadtiden påkalla förbesiktning av arbete som är svåråtkomligt för besiktning efter färdigställandet, som tas i bruk före färdigställandet eller då i övrigt särskilda skäl föreligger.”
-											</p>
+										<p class="bold">
+											Enligt ABS 09 p 24
+										</p>
+										<p>
+											”Part får under entreprenadtiden påkalla förbesiktning av arbete som är svåråtkomligt för besiktning efter färdigställandet, som tas i bruk före färdigställandet eller då i övrigt särskilda skäl föreligger.”
+										</p>
+										<p  class="bold">Redo att boka? Hör av dig så hjälper vi dig!</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/Xyfx6y" data-mode="drawer_left" target="_blank">
+											Lämna ett meddelande
+										</a>
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+										<a href="tel:0101654000">
+											<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+										</a>
 									</li>
 								</ul>
 							</div>
@@ -284,6 +291,14 @@
 											<br>
 											<br> Efter besiktningen skickas (e-post) ett formellt slutbesiktningsutlåtande till dig och entreprenör/er.
 										</p>
+										<p  class="bold">Redo att boka? Hör av dig så hjälper vi dig!</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/Xyfx6y" data-mode="drawer_left" target="_blank">
+											Lämna ett meddelande
+										</a>
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+										<a href="tel:0101654000">
+											<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+										</a>
 									</li>
 								</ul>
 							</div>
@@ -298,6 +313,14 @@
 											”Om en konsumententreprenad inte godkänns ska en ny slutbesiktning föreskrivas av besiktningsmannen.”
 											<br> ”Om en konsumententreprenad leder till tvist är det alltid allmän domstol som kommer ifråga.”
 										</p>
+										<p  class="bold">Redo att boka? Hör av dig så hjälper vi dig!</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/Xyfx6y" data-mode="drawer_left" target="_blank">
+											Lämna ett meddelande
+										</a>
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+										<a href="tel:0101654000">
+											<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+										</a>
 									</li>
 								</ul>
 							</div>
@@ -318,6 +341,14 @@
 											<br> En efterbesiktning bekostas av entreprenören om stort antal fel kvarstår, annars av beställaren
 											<br> Handledning enligt BKKs handledning för entreprenadbesiktning, ”Vid efterbesiktning är det lämpligt att den påkallande parten betalar besiktningsmannen, och sedan får reglera detta kvittningsvis med sin motpart.”
 										</p>
+										<p  class="bold">Redo att boka? Hör av dig så hjälper vi dig!</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/Xyfx6y" data-mode="drawer_left" target="_blank">
+											Lämna ett meddelande
+										</a>
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+										<a href="tel:0101654000">
+											<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+										</a>
 									</li>
 								</ul>
 							</div>
@@ -334,6 +365,14 @@
 											<b>Handledning enligt BKKs handledning för entreprenadbesiktningar</b> ”Inom sexmånadersfristen får fel av alla slag påtalas, därefter dels dolda fel och dels fel av något av de fyra slag som framgår av 9§ konsumenttjänstlagen. §60 p3 får där
 											anses gälla fel som inte bort märkas vid slutbesiktning.”
 										</p>
+										<p  class="bold">Redo att boka? Hör av dig så hjälper vi dig!</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/Xyfx6y" data-mode="drawer_left" target="_blank">
+											Lämna ett meddelande
+										</a>
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+										<a href="tel:0101654000">
+											<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+										</a>
 									</li>
 								</ul>
 							</div>
@@ -348,6 +387,14 @@
 											<br>
 											<b>Handledning enligt BKKs handledning för entreprenadbesiktning</b> ”§59-besiktning kan påtalas av endera parten och göras inom två år från avlämnandet. Den ska betalas av den part som påkallat den, oberoende av om fel konstateras eller inte.”
 										</p>
+										<p  class="bold">Redo att boka? Hör av dig så hjälper vi dig!</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/Xyfx6y" data-mode="drawer_left" target="_blank">
+											Lämna ett meddelande
+										</a>
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+										<a href="tel:0101654000">
+											<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+										</a>
 									</li>
 								</ul>
 							</div>
@@ -370,6 +417,15 @@
 											<br> ”Besiktningsman för överbesiktning ska utses av parterna gemensamt. Om parterna inte kan enas vid val av besiktningsman får prövning istället ske i domstol. Särskilda skäl för att förlänga tiden för påkallande kan exempelvis vara om beställaren
 											drabbats av sjukdom.”
 										</p>
+										<br>
+										<p  class="bold">Redo att boka? Hör av dig så hjälper vi dig!</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/Xyfx6y" data-mode="drawer_left" target="_blank">
+											Lämna ett meddelande
+										</a>
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+										<a href="tel:0101654000">
+											<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+										</a>
 									</li>
 								</ul>
 							</div>
@@ -399,7 +455,7 @@
 											<br> Pris offereras separat.
 										</p>
 										<p class="bold margin-bottom-1">Ur Boverkets information om OVK:</p>
-										<p>
+										<p class="margin-bottom-1">
 											”I plan- och bygglagstiftningen finns bestämmelser om obligatorisk funktionskontroll av ventilationssystem i byggnader, OVK. OVK ska utföras av en certifierad sakkunnig funktionskontrollant. OVK ska genomföras dels innan ett ventilationssystem första
 											gången tas i bruk, så kallad första besiktning, dels regelbundet vid återkommande tillfällen, så kallad återkommande besiktning.
 											<br>
@@ -412,6 +468,14 @@
 											<br>
 											<br> Byggnadens ägare ansvarar också för att fel och brister i ventilationssystem som upptäcks vid OVK eller annars under byggnadens brukstid åtgärdas omgående.”
 										</p>
+										<p class="bold">Redo att boka? Hör av dig så hjälper vi dig!</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/Xyfx6y" data-mode="drawer_left" target="_blank">
+											Lämna ett meddelande
+										</a>
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+										<a href="tel:0101654000">
+											<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+										</a>
 									</li>
 								</ul>
 							</div>
@@ -443,6 +507,14 @@
 											följs, vara med vid det tekniska samrådet, besiktningar och andra kontroller samt skriva ett utlåtande som ska vara underlag för byggnadsnämndens slutbesked.</p>
 										<p>Den kontrollansvarige måste ha en självständig ställning. Det betyder till exempel att han eller hon inte får vara nära släkt med den som utför åtgärden eller arbeta på samma företag.</p>
 										<p>För att bli certifierad krävs kunskap, erfarenhet och lämplighet för uppgiften. Certifieringar får endast utfärdas av certifieringsorgan, det vill säga företag som har ackrediterats för denna uppgift av myndigheten Swedac.</p>
+										<p class="bold">Redo att boka? Hör av dig så hjälper vi dig!</p>
+										<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/Xyfx6y" data-mode="drawer_left" target="_blank">
+											Lämna ett meddelande
+										</a>
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+										<a href="tel:0101654000">
+											<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
+										</a>
 									</li>
 								</ul>
 							</div>
