--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 	<!-- BIG CTAS-->
 	<section class="slide whiteSlide" id="footer-nav">
 		<div class="padding-5 center">
-				<a href="https://medium.com/besiktningsbloggen" class="common-Link globalFooterCard soft-shadow white">
+				<a href="https://medium.com/besiktningsbloggen" class="globalFooterCard soft-shadow white">
 					<img src="assets/img/nyheter/blogpage_card.png" alt="besiktningsman.se bloggen - Vi utvecklar och förnyar" />
 				</a>
 				<a href="/nyheter/" class="globalFooterCard soft-shadow white">
