added summer headers + fade class

--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -190,7 +190,7 @@
 	</nav>
 
 	<!-- HEADER -->
-	<section class="slide autoHeight" data-name="home" id="">
+	<section class="slide autoHeight fade" data-name="home" id="">
 		<div class="content">
 			<div class="container" style="height: 560px;">
 				<div class="wrap">
@@ -205,7 +205,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="background" style="background-image:url(../../assets/img/backgrounds/winter/winter_apartments.jpg)" alt="Foto av ett snöigt innerstockholm"></div>
+		<div class="background" style="background-image:url(../../assets/img/backgrounds/summer/summer_apartments.jpg)" alt="Foto av ett snöigt innerstockholm"></div>
 	</section>
 	<section class="slide whiteSlide autoHeight" id="brf-offer">
 		<div class="container">
