--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -186,7 +186,7 @@
 		</div>
 	</nav>
 	<!-- HEADER -->
-	<section class="slide autoHeight" data-name="home" id="entreprenad-header">
+	<section class="slide autoHeight fade" data-name="home" id="entreprenad-header">
 		<div class="content">
 			<div class="container" style="height: 560px;">
 				<div class="wrap">
