--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -188,7 +188,7 @@
 		</div>
 	</nav>
 	<!-- HEADER -->
-	<section class="slide autoHeight" data-name="home" id="landingHeader">
+	<section class="slide autoHeight fade" data-name="home" id="landingHeader">
 		<div class="content">
 			<div class="container" style="height: 560px;">
 				<div class="wrap">
@@ -209,7 +209,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="background" style="background-image:url(../../assets/img/backgrounds/winter/winter_house.jpg)" alt="Fritidshus på svenska västkusten"></div>
+		<div class="background" style="background-image:url(../../assets/img/backgrounds/summer/summer_house.jpg)" alt="Fritidshus på svenska västkusten"></div>
 	</section>
 	<section class="slide whiteSlide autoHeight" id="privat-offer">
 		<div class="container">
