--- a/tjanster/brf/garantibesiktning/index.html
+++ b/tjanster/brf/garantibesiktning/index.html
@@ -178,10 +178,10 @@
 						<ul>
 							<li class="col-5-12" style="max-width:750px;margin: 0 auto;">
 								<div class="bread-crumbs">
-							    <a href="../../entreprenad/">Entreprenad<i class="icono-arrow2-left"></i></a>
-							    <span class="bread-crumbs-title xs-hide">Förbesiktning</span>
+							    <a href="../../brf/">Bostadsrättsförening<i class="icono-arrow2-left"></i></a>
+							    <span class="bread-crumbs-title xs-hide">Garantibesiktning</span>
 							  </div>
-								<h2 class="common-IntroText">Förbesiktning kan ske när som helst under byggprocessen om någon part önskar det.</h2>
+								<h2 class="common-IntroText">X kan ske när som helst under byggprocessen om någon part önskar det.</h2>
 								<p>
 									Skälet kan exempelvis vara att någon del av entreprenaden kan bli svår att besikta eller felavhjälpa,
 									om man väntar till efter färdigställandet.
