Foundations added for GB landing

--- a/tjanster/brf/garantibesiktning/index.html
+++ b/tjanster/brf/garantibesiktning/index.html
@@ -163,64 +163,96 @@
 		</div>
 	</nav>
 	<!-- HEADER -->
-	<div class="StripeBackground">
-	    <div class="stripe s0"></div>
-	    <div class="stripe s2"></div>
-	    <div class="stripe s3"></div>
-	    <div class="stripe s4"></div>
-	</div>
+	<section class="slide autoHeight fade" data-name="home" id="">
+		<div class="content">
+			<div class="container" style="height: 560px;">
+				<div class="wrap">
 
-	</section>
-	<section class="slide whiteSlide autoHeight" id="entreprenad-services" style="background: transparent !important;">
-		<div class="container">
-			<div class="container-lg">
-				<div class="fix-10-12 left margin-top-1 margin-bottom-2 service-text">
-						<ul>
-							<li class="col-5-12" style="max-width:750px;margin: 0 auto;">
+					<div class="fix-10-12" style="padding-top: 5%;">
 								<div class="bread-crumbs">
 							    <a href="../../brf/">Bostadsrättsförening<i class="icono-arrow2-left"></i></a>
 							    <span class="bread-crumbs-title xs-hide">Garantibesiktning</span>
 							  </div>
-								<h2 class="common-IntroText">X kan ske när som helst under byggprocessen om någon part önskar det.</h2>
+								<h1 class="common-IntroText2 text-white">Garantibesiktning ger din BRF trygghet genom att dolda byggfel upptäcks innan garantitiden löper ut.</h1>
 								<p>
-									Skälet kan exempelvis vara att någon del av entreprenaden kan bli svår att besikta eller felavhjälpa,
-									om man väntar till efter färdigställandet.
+									Är din BRF nybyggd eller har ni utfört ett renoveringsprojekt de senaste två åren?
 									<br>
-									<br>
-									Besiktningsman.se erbjuder förbesiktning för nyproduktion och ROT enligt regelverken AB04 och ABT 06 kap 7 (se nedan).
-									Besiktningen utförs av opartiska besiktningsmän godkända av SBR med särskild fackkompetens för aktuellt besiktningsobjekt.
-									Vi erbjuderäven komplett besiktningsgrupp.
-									<br>
-									<br>
-									Besiktningen utförs okulärt och dokumenteras digitalt av besiktningsmannen på plats.
-									Felbilaga finns tillgänglig omgående efter besiktningen och komplett utlåtande levereras inom 3 arbetsdagar.
-									<br>
-									<br>
-									Förbesiktning kan beställas som en enstaka tjänst eller ingå i en paketlösning med flera besiktningstjänster. Pris offereras separat.
+									Då kan en garantibesiktning behövas.
 								</p>
-								<p class="cta-headline bold">Enligt AB04 och ABT06 Kap 7 §1 har part rätt att påkalla förbesiktning om:</p>
-								<p>
-									<b>1</b> arbete efter färdigställandet av entreprenaden inte är eller inte utan väsentligt ingrepp blir åtkomligt för besiktning.
-									<br>
-									<b>2</b> avhjälpande av fel i arbete efter färdigställande skulle vara till väsentlig olägenhet för parten
-									<br>
-									<b>3</b> arbete före färdigställande tas i bruk av beställaren eller
-									<br>
-									<b>4</b> i övrigt särskilda skäl föreligger
-								</p>
-								<p class="cta-headline bold">Kommentar till kap 7 §1 i AB04 och ABT06, </p>
-								<p>
-									"Ett särskilt skäl för förbesiktning kan vara att parterna i förväg vill få besiktningsmannens
-									bedömning av kontraktsenhetligheten av visst arbete som antingen återkommer i ett stort antal eller gäller
-									principer eller kvalitetskrav för utförandet, sk normerande besiktning.”
-								</p>
-							</li>
+								<a href="#boka"><button type="button" name="button" class="common-Button text-blue bold">kontakta mig</button> </a>
+					</div>
+
+				</div>
+			</div>
+		</div>
+		<div class="background" style="background-image:url(../../../assets/img/backgrounds/foundations.jpg)" alt="Foto av ett snöigt innerstockholm"></div>
+	</section>
+	<section class="slide whiteSlide autoHeight" style="background: #f6f9fc;">
+		<div class="container">
+			<div class="container-lg">
+				<div class="fix-10-12">
+					<div class="col-5-12 center">
+						<h3 style="margin-top: 25px;">Vi har sedan 2003 arbetat som ett oberoende besiktningsföretag.</h3>
+						<p>Och besiktigat hundratals BRF'er, bland annat de byggda av:</p>
+						<ul class="flex grid-48 later equal">
+									<li class="col-3-12">
+										<img src="../../../assets/img/logos/tjanster/einarmattsson_logo.png" alt="EINAR MATTSSON">
+									</li>
+									<!-- <li class="customer-logo">
+										<img src="../../../assets/img/logos/tjanster/ssm_logo.png" alt="SSM">
+									</li> -->
+									<li class="col-3-12">
+										<img src="../../../assets/img/logos/tjanster/skanska_logo.png" alt="SKANSKA">
+									</li>
+									<li class="col-3-12">
+										<img src="../../../assets/img/logos/tjanster/ncc_logo.png" alt="NCC" style="padding-bottom: 15px;">
+									</li>
+									<li class="col-3-12">
+										<img src="../../../assets/img/logos/tjanster/peab_logo.png" alt="PEAB">
+									</li>
 						</ul>
+
+					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="slide white form-section">
+	<section class="slide whiteSlide autoHeight" style="background: transparent !important;">
+		<div class="container">
+			<div class="container-lg">
+				<div class="fix-10-12 margin-top-1">
+
+					<div class="col-5-12">
+						<div class="center">
+							<h2 class="common-IntroText">Varför göra en Garantibesiktning med Besiktningsman.se?</h2>
+							<p>Om du har en BRF som är nybyggd eller haft renoveringsarbeten utförda för mindre än 2 år sedan så gäller en avtalsmässig garantitid, vilket ger dig rätten att påkalla en garantibesiktning för att se om fel framträtt.</p>
+							<p>Om det visar sig att fel har framträtt då blir entreprenören skyldig till att åtgärda felen - vilket inte ska kosta bostadsrättsföreningen något.</p>
+
+							<ul class="flex">
+		            <li class="col-4-12">
+										<img src="../../../assets/svg/checkmark_icon.svg" alt="Ikon som illusterar bilagor" style="width:80px;">
+		                <h3 class="equalElement">Insikt</h3>
+		                <p class="tiny opacity-6">Dubbelkolla att allt står rätt till av en oberoende besiktningsman.</p>
+		            </li>
+		            <li class="col-4-12">
+										<img src="../../../assets/svg/timer_icon.svg" alt="Ikon som illusterar bilagor" style="width:80px;">
+		                <h3 class="equalElement">Spara tid</h3>
+										<p>Upptäck fel innan garantitiden löper ut.</p>
+		            </li>
+		            <li class="col-4-12">
+										<img src="../../../assets/svg/lists_icon.svg" alt="Ikon som illusterar bilagor" style="width:110px;">
+		                <h3 class="equalElement">Snabb tillgång</h3>
+										<p>Få felbilagan samma dag och utlåtandet inom <br> 3 dagar.</p>
+		            </li>
+		          </ul>
+						</div>
+	        </div>
+
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="slide white form-section" id="boka">
 		<div class="container-lg">
 				<div class="formBackground form-column">
 						<h3 class="pad-header margin-0 text-blueGrey center">
@@ -255,30 +287,6 @@
 
 		</div>
 	</section>
-<section class="ctas">
-  <div class="container-lg">
-    <div class="cta general-queries">
-      <div class="copy-column">
-        <h4 class="cta-headline">Generella frågor</h4>
-        <p class="cta-copy">
-					Gå till vår
-					<a href="../../../kontakt/" class="common-Link">kontaktsida</a>
-					 och lämna ett meddelande.
-				</p>
-      </div>
-    </div>
-    <div class="cta support">
-      <div class="copy-column">
-        <h4 class="cta-headline">Telefon</h4>
-        <p class="cta-copy">
-					Ni kan även ringa vår växel
-					mellan 08:30 och 17:00
-					på: <a href="tel:0101654000" class="common-Link">010-165 40 00</a>
-				</p>
-      </div>
-    </div>
-  </div>
-</section>
 <section class="slide whiteSlide" id="footer-nav">
 	<div class="container-lg padding-5 center">
 		<h3 class="center">Söker ni en annan besiktningstyp?</h3>
