--- a/tjanster/brf/garantibesiktning/index.html
+++ b/tjanster/brf/garantibesiktning/index.html
@@ -220,7 +220,7 @@
 		</div>
 		<div class="background" style="background-image:url(../../../assets/img/backgrounds/foundations.jpg)" alt="Foto av ett snöigt innerstockholm"></div>
 	</section>
-		<!-- GB customers -->
+	<!-- GB customers -->
 	<section class="slide whiteSlide autoHeight" style="background: #f6f9fc;">
 		<div class="container">
 			<div class="container-lg">
@@ -251,7 +251,7 @@
 			</div>
 		</div>
 	</section>
-		<!-- GB why bm -->
+	<!-- GB why bm -->
 	<section class="slide whiteSlide autoHeight">
 		<div class="container">
 			<div class="container-lg">
@@ -354,10 +354,10 @@
 		</div>
 	</section>
 	<!-- GB booking -->
-	<section class="slide white form-section" id="boka">
+	<section class="slide form-section" id="boka" style="background: #f6f9fc;">
 		<div class="container-lg">
 			<div class="formBackground form-column">
-				<h3 class="pad-header margin-0 text-blueGrey center">
+				<h3 class="pad-header margin-0 center common-BodyTitle">
 					Redo att boka?
 					<p class="small bold dark margin-0" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
 				</h3>
@@ -382,8 +382,8 @@
 			</div>
 			<div class="secondary-column">
 				<div class="customers">
-					<p class="copy-1">Du är i gott sällskap.</p>
-					<p class="copy-2">Gör som många andra och anlita Besiktningsman.se</p>
+					<p class="copy-1 common-BodyTitle">Säkra din fastighet innan garantin löper ut.</p>
+					<p class="copy-2 common-BodyText">Gör som många andra och anlita Besiktningsman.se</p>
 					<ul class="customer-logos">
 						<li class="customer-logo">
 							<img src="../../../assets/img/logos/tjanster/einarmattsson_logo.png" alt="EINAR MATTSSON">
@@ -406,6 +406,71 @@
 
 		</div>
 	</section>
+	<!-- about us -->
+	<section class="slide whiteSlide autoHeight">
+		<div class="content">
+			<div class="container-lg">
+
+					<div class="fix-10-12 margin-top-1 margin-bottom-5">
+						<h2 class="common-IntroText2" style="font-size: 42px;">Sveriges ledande entreprenadbesiktningsföretag</h2>
+						<p class="common-BodyText margin-bottom-5 center">
+							Besiktningsman.se bildades 2003 av erfarna besiktningsmän som ett oberoende besiktningsföretag.
+							<br>
+							Våra välutbildade medarbetare har gedigen bakgrund från byggsektorn och besiktningsarbete.
+							<br>
+							Vårt fokus är att bemöta höga kundkrav på stabilt och sakkunnigt utförande.
+						</p>
+						<ul class="flex left">
+							<li class="col-6-12 fromBottomLeft">
+								<h3 class="common-BodyTitle">Vi har sedan 2012 arbetat med vår egen besiktningsplattform iSpect.</h3>
+								<p class="common-BodyText">
+									Det betyder att vi arbetar digitalt med alla besiktningar som vi utför runtom i Sverige.
+									<br>
+									Det innebär att vi via iSpect har full koll på vilka fel som brukar dyka upp under garantitiden för din BRF, beroende på hur den byggdes, och vart i landet byggnaden står.
+								</p>
+							<li class="col-6-12 bottom">
+								<img src="../../../assets/img/backgrounds/bm_goran.jpg" class="soft-shadow img-border-radius" alt="Foto av besiktningsman" />
+							</li>
+						</ul>
+					</div>
+					<div class="fix-10-12 margin-bottom-5">
+						<ul class="flex left">
+							<li class="col-6-12 fromBottomLeft">
+								<h3 class="common-BodyTitle">När våra besiktningsmän utför en besiktning av din BRF så kommer den utföras med hjälp av iSpect.</h3>
+								<p class="common-BodyText">
+									Direkt efter besiktningen utförts får ni en komplett felbilaga med alla upptäckta brister.
+									<br>
+									3 dagar senare levererar vi det kompletta utlåtandet över besiktningen,
+									så att ni kan vara trygga i att alla eventuella garantiärenden är dokumenterade korrekt så att de kan åtgärdas.
+								</p>
+							<li class="col-6-12 bottom">
+								<img src="../../../assets/img/backgrounds/bm_two.jpg" class="soft-shadow img-border-radius" alt="Foto av besiktningsman" />
+							</li>
+						</ul>
+					</div>
+					<div class="fix-10-12 padding-5">
+						<div class="center-m-down">
+							<ul class="grid later equal center margin-bottom-3">
+								<li class="col-8-12">
+									<img src="../../../assets/svg/ispect_logo.svg" alt="" style="width: 100px;">
+									<h3 class="common-BodyTitle">100% digitala med iSpect</h3>
+									<p class="fix-4-12 common-BodyText">Med iSpect ser vi till att fel kan förebyggas och att uppkomna fel kan åtgärdas direkt!</p>
+									<span class="common-Link"><a href="../../../ispect/">Läs mer om iSpect</a></span>
+								</li>
+								<li class="col-8-12">
+									<img src="../../../assets/svg/bm_se_checkmark_color.svg" alt="" style="width:130px;margin-left: 80px;margin-bottom: 10px;margin-top: 16px;">
+									<h3 class="common-BodyTitle">Ett opartiskt besiktningsföretag</h3>
+									<p class="fix-4-12 common-BodyText">Vi utför besiktnings- och KA- tjänster objektivt och opartiskt enligt gällande bygg- och branschregler.</p>
+									<span class="common-Link"><a href="../../../om_oss/">Läs mer om oss</a> </span>
+								</li>
+							</ul>
+							<a href="#" class="common-Button blue text-white">kontakta mig</a>
+						</div>
+					</div>
+
+			</div>
+		</div>
+	</section>
 	<section class="slide whiteSlide" id="footer-nav">
 		<div class="container-lg padding-5 center">
 			<h3 class="center">Söker ni en annan besiktningstyp?</h3>
@@ -422,48 +487,105 @@
 			</div>
 		</div>
 	</section>
-	<!-- Footer -->
-	<section class="slide customFooter autoHeight">
-		<div class="content">
-			<div class="container-lg">
-				<div class="wrap">
+<!-- Footer -->
+<section class="slide customFooter autoHeight">
+	<div class="content">
+		<div class="container-lg">
+			<div class="wrap">
 
-					<div class="fix-10-12 center">
-						<img src="../../../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="max-width: 400px;" class="margin-bottom-1">
-						<p class="bold">Sveriges ledande entreprenadbesiktningsföretag</p>
-						<ul class="later center">
-							<li class="col-6-12">
-								<h3 class="margin-bottom-1">Kontor</h3>
-								<a target="_blank" href="https://goo.gl/maps/RSkTwoQWpEn">
-									<p class="text-blue bold">Heleneborgsgatan 54, 117 32 Stockholm</p>
+				<div class="fix-12-12 center toCenter fromCenter">
+					<img src="../../../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="max-width: 400px;" class="margin-bottom-1">
+					<p class="bold" style="margin-bottom: 50px;">Sveriges ledande entreprenadbesiktningsföretag</p>
+					<div class="container-lg">
+						<ul class="grid fixedSpaces  center toCenter fromCenter">
+							<li class="col-2-10 col-tablet-1-2 col-phone-1-1 left" style="margin-right: 200px;">
+								<h3 class="margin-bottom-1">Besök oss</h3>
+								<iframe class="googleMap" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1017.9200105656672!2d18.0317351!3d59.3189283!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f77c547f85d63%3A0xb513abd6d9566d13!2sBesiktningsman.Se+Sverige+AB!5e0!3m2!1sen!2smt!4v1541519831863" width="375" height="375" frameborder="0" style="border:0" allowfullscreen></iframe>
+							</li>
+							<li class="col-2-10 col-tablet-1-2 col-phone-1-1 left">
+								<h3 class="margin-bottom-1">Ta reda på mer</h3>
+								<a href="../../kontakt/">
+									<p class="text-blue">Kontakta oss</p>
+								</a>
+								<a href="../../om_oss/">
+									<p class="text-blue">Om oss</p>
+								</a>
+								<a href="../../ispect/">
+									<p class="common-Link">iSpect - Digital Besiktningsprocess</p>
+								</a>
+								<a href="../../karriar/">
+									<p class="text-blue">Karriär</p>
 								</a>
 								<a href="tel:0101654000">
-									<p class="text-blue bold">Telefon: 010-165 40 00</p>
+									<p class="text-blue">Ring oss: 010-165 40 00</p>
 								</a>
 							</li>
-							<li class="col-6-12">
-								<h3 class="margin-bottom-1">Följ oss</h3>
-								<a target="_blank" href="https://medium.com/besiktningsbloggen">
-									<p class="text-blue bold">Besiktningsbloggen</p>
+							<li class="col-2-10 col-tablet-1-2 col-phone-1-1 left">
+								<h3 class="margin-bottom-1">Besiktningsbloggen</h3>
+								<a class="" target="_blank" href="http://bit.ly/bm_debattartikel_svd">
+									<p class="text-blue">Besiktningsman.se svarar i SvD på debattinlägg om byggbranschens systemfel</p>
 								</a>
-								<a target="_blank" href="https://twitter.com/BjornSelling">
-									<p class="text-blue bold">Twitter</p>
+								<a class="" target="_blank" href="https://medium.com/besiktningsbloggen/v%C3%A4lkommen-till-besiktningsbranschens-och-byggbranschens-nya-guld%C3%A5lder-a6b6a0ac238b">
+									<p class="text-blue">Välkommen till besiktningsbranschens (och byggbranschens) nya guldålder!</p>
 								</a>
-								<a target="_blank" href="https://www.facebook.com/Besiktningsman/">
-									<p class="text-blue bold">Facebook</p>
+								<a class="" target="_blank" href="https://medium.com/besiktningsbloggen/sluta-betala-oss-de0640a6b6c9">
+									<p class="text-blue">Sluta betala oss!</p>
 								</a>
-								<a target="_blank" href="https://www.linkedin.com/company/24778105/">
-									<p class="text-blue bold">Linkedin</p>
+								<a class="" target="_blank" href="https://medium.com/besiktningsbloggen/har-du-byggkort-e2adb48b2508">
+									<p class="text-blue">Har du byggkort?!</p>
+								</a>
+								<a class="" target="_blank" href="https://medium.com/besiktningsbloggen">
+									<p class="text-blue">Läs mer</p>
 								</a>
 							</li>
+								<li class="col-2-10 col-tablet-1-2 col-phone-1-1 left">
+									<h3 class="margin-bottom-1">Byggintelligens</h3>
+									<a target="_blank" href="http://bit.ly/byggintelligens5_20182019">
+										<p class="common-Link">Tack för 2018 – ett bra år!</p>
+									</a>
+									<a href="http://bit.ly/byggintelligens2_2018_utveckling">
+										<p class="common-Link">Besiktningsbranschen ska utvecklas och synas!</p>
+									</a>
+									<a href="http://bit.ly/byggintelligens1_2018_palsundet">
+										<p class="common-Link">Förstörelsen av Pålsundet</p>
+									</a>
+									<a href="http://bit.ly/byggintelligens4_2017">
+										<p class="common-Link">Nu samlar vi kraft för 2018!</p>
+									</a>
+								</li>
 						</ul>
 					</div>
 
 				</div>
+			<div class="customFooterSeperator"></div>
+			<div class="customFooterSocials">
+					<h4 class="">Håll kontakten</h4>
+            <div class="right">
+                <a class="socialIcons" href="https://www.instagram.com/besiktningsman.se/">
+									<svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+									  <path d="M19.8 5.6a1.4 1.4 0 1 1-2.8 0 1.4 1.4 0 0 1 2.8 0zM12 16a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm0-10.2a6.2 6.2 0 1 0 0 12.4 6.2 6.2 0 0 0 0-12.4zm0-3.6h4.8c1.2 0 1.9.3 2.3.4.5.3 1 .5 1.4 1 .4.4.6.8.9 1.3.1.4.3 1 .4 2.3a83.3 83.3 0 0 1-.4 11.9c-.3.5-.5 1-1 1.4-.4.4-.8.6-1.3.9-.4.1-1 .3-2.3.4A83.3 83.3 0 0 1 5 21.4c-.5-.3-1-.5-1.4-1-.4-.4-.6-.8-.9-1.3-.1-.4-.3-1-.4-2.3A83.3 83.3 0 0 1 2.6 5c.3-.5.5-1 1-1.4.4-.4.8-.6 1.3-.9.4-.1 1-.3 2.3-.4H12zM12 0H7C5.9.2 5 .4 4.2.7c-.7.3-1.4.7-2 1.4C1.2 2.7.8 3.4.5 4.1c-.3.8-.5 1.7-.5 3a85.2 85.2 0 0 0 .5 12.8c.3.7.7 1.4 1.4 2 .7.8 1.4 1.2 2.1 1.5.8.3 1.7.5 3 .5a85.2 85.2 0 0 0 12.8-.5c.7-.3 1.4-.7 2-1.4.8-.7 1.2-1.4 1.5-2.1.3-.8.5-1.7.5-3a85.2 85.2 0 0 0-.5-12.8c-.3-.7-.7-1.4-1.4-2-.7-.8-1.4-1.2-2.1-1.5-.8-.3-1.7-.5-3-.5L12 0z" fill="#47525D" fill-rule="evenodd"/>
+									</svg>
+                </a>
+                <a class="socialIcons" href="https://www.facebook.com/Besiktningsman/">
+                    <svg class="" xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22"><path fill="currentColor" d="M21.5 20.45c0 .636-.32 1.05-.968 1.05h-5.45v-7.946h2.772l.42-3.405h-3.19V8.377c0-.908.25-1.635 1.592-1.635h1.907V4.036c-.583-.04-1.487-.125-2.67-.125-2.463 0-4.33 1.465-4.33 4.156v2.083H8.667v3.404h2.916V21.5H1.48c-.653 0-.98-.414-.98-1.05V1.913C.5 1.278.827.5 1.48.5h19.052c.647 0 .968.778.968 1.413V20.45z"/></svg>
+                </a>
+                <a class="socialIcons" href="https://twitter.com/BjornSelling">
+                    <svg class="" xmlns="http://www.w3.org/2000/svg" width="22" height="19" viewBox="0 0 22 19"><path fill="currentColor" d="M21.193 1.286c-.857.52-1.804.9-2.816 1.1A4.377 4.377 0 0 0 15.143.954c-2.445 0-4.43 2.034-4.43 4.544 0 .355.038.7.114 1.034-3.682-.19-6.947-1.996-9.134-4.75a4.632 4.632 0 0 0-.6 2.288c0 1.576.782 2.967 1.972 3.782a4.372 4.372 0 0 1-2.01-.567v.056c0 2.203 1.53 4.04 3.558 4.456-.372.107-.764.16-1.168.16a4.32 4.32 0 0 1-.834-.08c.565 1.805 2.2 3.12 4.14 3.154a8.746 8.746 0 0 1-5.504 1.946c-.357 0-.71-.02-1.057-.062a12.331 12.331 0 0 0 6.792 2.04c8.152 0 12.61-6.923 12.61-12.93 0-.197-.005-.394-.012-.588a9.126 9.126 0 0 0 2.21-2.35 8.74 8.74 0 0 1-2.545.714 4.538 4.538 0 0 0 1.948-2.514"/></svg>
+                </a>
+                <a class="socialIcons" href="https://www.linkedin.com/company/24778105/">
+									<svg version="1.1" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" width="22" height="22">
+										<g fill="none" fill-rule="evenodd"><g fill-rule="nonzero"><path d="m32 30c0 1.104-0.896 2-2 2h-28c-1.104 0-2-0.896-2-2v-28c0-1.104 0.896-2 2-2h28c1.104 0 2 0.896 2 2v28z" fill="#47525D"/><g transform="translate(7 6)" fill="#fff"><rect y="5" width="4" height="14"/><path d="m13.499 5c-2.791 0-3.271 1.018-3.499 2v-2h-4v14h4v-8c0-1.297 0.703-2 2-2 1.266 0 2 0.688 2 2v8h4v-7c0-4-0.521-7-4.501-7z"/><circle cx="2" cy="2" r="2"/></g></g></g>
+									</svg>
+                </a>
+								<a class="socialIcons" href="https://medium.com/besiktningsbloggen">
+									<svg version="1.1" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><g fill="none" fill-rule="evenodd"><g fill="#47525D" fill-rule="nonzero"><path d="m16 0c-8.8364 0-16 7.1627-16 15.999 0 8.8367 7.1639 16.001 16 16.001 8.8358 0 16-7.1639 16-16.001 0-8.8366-7.1639-15.999-16-15.999zm9.0762 10.604h-0.7289c-0.27069 0-0.65327 0.39038-0.65327 0.64029v9.0584c0 0.25023 0.38264 0.59129 0.65327 0.59129h0.7289l1.3e-4 2.1502h-6.604v-2.1502h1.3822v-9.5221h-0.067705l-3.2277 11.672h-2.499l-3.1861-11.672h-0.080635v9.522h1.3822v2.1502l-5.5288 6.5e-5v-2.1502h0.70791c0.29161 0 0.67426-0.34107 0.67426-0.59129v-9.0583c0-0.2499-0.38264-0.64029-0.67426-0.64029h-0.70791v-2.1502h6.9135l2.2699 8.447h0.062442l2.2909-8.447h6.8928v2.1502h-1.3e-4z"/></g></g>
+									</svg>
+								</a>
+            </div>
 			</div>
 		</div>
-		<p class="text-blueGrey center-m-down bold" style="font-size:13px;">© Besiktningsman.se - <a href="http://sebastianselling.com/" target="_blank">Design av Sebastian Selling</a></p>
-	</section>
+	</div>
+</section>
 	<!-- POPUP WITH LINKS TO DOCUMENTS -->
 	<div class="popup hidden" data-popup-id="docs" id="docs">
 		<div class="close closeButton left opaque white text-blue">X</div>
